# alertrs

./: .envrc_example  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/: 20250610095404_create_users.down.sql  20250610095404_create_users.up.sql
src/: main.rs  websocket.rs  websockets.rs
src/api/: authentications.rs  mod.rs  token.rs
src/database/: delete_macros.rs  insert_macros.rs  join_macros.rs  query_macros.rs  traits.rs  update_macros.rs  values.rs
src/models/: authentication.rs  mod.rs  user.rs  user_backup_code.rs  user_token.rs
src/utils/: backup_codes.rs  time.rs
