[package]
name = "alertrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
http = "1.3.1"
rocket = { version = "0.5.1" }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "chrono",
] }
rocket_cors = "0.6.0"
ws = { package = "rocket_ws", version = "0.1.1" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.17"
