[package]
name = "alertrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
http = "1.3.1"
rocket = { version = "0.5.1" }
rocket_cors = "0.6.0"
rocket_ws = "0.1.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
futures = "0.3"
warp = "0.3"
